# epi

./: .beans.yml  .envrc  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  dune-project  dune-workspace  epi.opam  flake.nix  justfile  package.nix
.beads/: metadata.json
.beans/: epi-221o--add-table-for-infolist.md  epi-3mzn--upgrade-should-not-require-booted.md  epi-49ti--auto-cd-ssh-when-instance-is-a-project-instance.md  epi-4dji--an-invalid-hostname-blocks-boot.md  epi-4uwl--slim-down-e2e-resource-requirements.md  epi-5c21--add-memory-ballooning.md  epi-7gbp--sort-project-instances-before-global.md  epi-971r--init-should-prompt-for-ports.md  epi-azk6--add-upgrade-capability.md  epi-bm0c--launch-ux-updates.md  epi-bqh5--atomic-descriptor-cache-writes-via-tempfilerename.md  epi-f1yf--shorten-shutdown-timeout-to-10s.md  epi-fcsp--init-should-append-dev-to-name-by-default.md  epi-fsw7--add-home-manager-example.md  epi-ft28--filter-descriptor-users-to-non-system-users.md  epi-gl76--document-epi-module-requirementexample-and-fix-com.md  epi-jcjq--use-tilde-in-paths-in-list.md  epi-k1hn--add-epi-project-dir-to-hook-env.md  epi-kwg3--info-should-include-uptime-and-a-service-overview.md  epi-l5pe--remotecommand-ends-up-in-config.md  epi-m35f--stop-force-f-should-immediately-terminate.md  epi-nbt7--actions-should-start-or-prompt-to-start.md  epi-o641--support-custom-ssh-config-lines.md  epi-p0vm--allow-manual-project-setup-with-project-p.md  epi-q25u--sort-projects-first-in-list.md  epi-qfj0--tell-user-when-project-is-detecteduserd.md  (+5 more)
.claude/: .credentials.json  (+1 more)
(+412 files in other folders)
