(lang dune 3.20)

(name epi)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name <author@example.com>")

(maintainers "Maintainer Name <maintainer@example.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name epi)
 (synopsis "A short synopsis")
 (depends cmdlang cmdliner cmdlang-to-cmdliner))
